--- a/contact/templates/contact/create.html
+++ b/contact/templates/contact/create.html
@@ -19,6 +19,10 @@
           <label for="{{ field.id_for_label }}">{{ field.label }}</label>
           {{ field }}
           {{ field.errors }}
+          
+          {% if field.help_text %}
+            <p class="help-text">{{ field.help_text }}</p>
+          {% endif %}
         </div>
       {% endfor %}
     </div>
@@ -27,7 +31,6 @@
       <div class="form-content">
         <div class="form-group">
           <div class="message error">
-
             {{ form.non_field_errors }}
           </div>
         </div>
