--- a/base_static/global/css/style.css
+++ b/base_static/global/css/style.css
@@ -239,6 +239,11 @@ svg {
   border: 1px solid rgba(255, 255, 0, 90%);
 }
 
+.message.info {
+  background: rgba(0, 162, 255, 0.3);
+  border: 1px solid rgba(0, 60, 255, 0.9);
+}
+
 .form-wrapper {
   max-width: 60rem;
   margin: var(--spacing) auto;
