--- a/base_templates/global/partials/_header.html
+++ b/base_templates/global/partials/_header.html
@@ -11,7 +11,11 @@
         <a href="{% url 'contact:create' %}" class="menu-link">Criar contato</a>
       </li>
       <li class="menu-item">
-        <a href="" class="menu-link">Link 2</a>
+        {% if user.is_authenticated %}
+          <a href="{% url 'contact:logout' %}" class="menu-link">Logout</a>
+        {% else %}
+          <a href="{% url 'contact:login' %}" class="menu-link">Login</a>
+        {% endif %}
       </li>
     </ul>
   </nav>
