--- a/base_templates/global/partials/_header.html
+++ b/base_templates/global/partials/_header.html
@@ -7,9 +7,19 @@
 
   <nav class="menu">
     <ul class="menu-list">
-      <li class="menu-item">
-        <a href="{% url 'contact:create' %}" class="menu-link">Criar contato</a>
-      </li>
+      {% if user.is_authenticated %}
+        <li class="menu-item">
+          <a href="{% url 'contact:create' %}" class="menu-link">Criar contato</a>
+        </li>
+        <li class="menu-item">
+          <a href="{% url 'contact:user_update' %}" class="menu-link">Atualizar meu perfil</a>
+        </li>
+      {% else %}
+        <li class="menu-item">
+          <a href="{% url 'contact:register' %}" class="menu-link">Criar conta</a>
+        </li>
+      {% endif %}
+      <!-- LOGIN/LOGOUT -->
       <li class="menu-item">
         {% if user.is_authenticated %}
           <a href="{% url 'contact:logout' %}" class="menu-link">Logout</a>
